--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 				box-sizing: border-box;
 				font-family: serif;
 			}
+
+			figure {
+				width: 100px;
+				height: 100px;
+				background-color: red;
+
+				position: absolute;
+				top:0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+
+				margin: auto;
+			}
 		</style>
 	</head>
 	<body>
