--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			}
 
 			figure {
+				user-select: none;
 				cursor: grab;
 				position: absolute;
 				top:-10em;
@@ -27,6 +28,12 @@
 			}
 
 			h1 {
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
 				transition: text-shadow cubic-bezier(0.1, 0.1, 0.25, 2.0) 3s, opacity 1s, transform 1s;
 				font-size: 4em;
 				text-align: center;
@@ -39,7 +46,7 @@
 				opacity: .75;
 			}
 
-			h1:hover {
+			h1:hover, h1:active {
 				transform: scale(1.005);
 				opacity: 1;
 				text-shadow: 1px 1px 0px black,
@@ -56,7 +63,7 @@
 				opacity: .5;
 			}
 
-			h1 + h1:hover {
+			h1 + h1:hover, h1 + h1:active {
 				opacity: 1;
 				text-shadow: 1px 1px 0px black,
 						-1px -1px 0px black,
@@ -71,7 +78,7 @@
 				opacity: .25;
 			}
 
-			h1 + h1 + h1:hover {
+			h1 + h1 + h1:hover, h1 + h1 + h1:active {
 				text-shadow: 1px 1px 0px black,
 						-1px -1px 0px black,
 						1px -1px 0px black,
