--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>hey, tabs here</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="theme-color" content="#bbc1ee">
 		<style>
 			* {
 				margin: 0;
@@ -11,7 +12,7 @@
 			}
 
 			body {
-				background: radial-gradient(rgba(23, 45, 200, .05), rgba(23, 45, 200, .3));
+				background: radial-gradient(rgba(23, 45, 200, .05) 0%, rgba(23, 45, 200, .3) 80%);
 			}
 
 			figure {
@@ -25,6 +26,7 @@
 
 				margin: auto;
 				height: 4em;
+				padding: 1em;
 				background: transparent;
 			}
 
@@ -43,6 +45,7 @@
 				-webkit-text-stroke: 1px black;
 				height: 1em;
 				opacity: .75;
+				letter-spacing: -0.05em;
 			}
 
 			h1:hover, h1:active {
